syntax = "proto3";

// Java/Kotlin 프로젝트용 패키지 설정
option java_package = "com.user.payment.grpc";

// 각 클래스를 별도 파일로 생성 (코드 가독성)
option java_multiple_files = true;

// proto 네임스페이스 (다른 proto 파일과 구분)
package user.payment;


service UserPaymentService {
  rpc SearchUserPayments (GrpcUserPaymentRequest) returns (GrpcUserPaymentListResponse);
}

message GrpcUserPaymentRequest {
  int64 user_id = 1;
}

message GrpcUserPaymentListResponse {
  repeated GrpcUserPaymentResponse payments = 1;
}

message GrpcUserPaymentResponse {
  int64 reservation_id = 1;
  int64 payment_id = 2;
  string payment_status = 3;
  string payment_type = 4;
  int64 price = 5;
}